 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access
 + Additional button for just randomizing theme that will not change your selected map
 + Randomizing map/theme in online-mode will not include DLC-content
 + New teams start with a random grave and fort
 + Hedgewars creates 4 teams instead of 1 on its first launch
 * Campaign screen does no longer show AI-controlled teams
 * Campaign names and campaign mission names can now be translated
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default
 * Fix language names in language list being always in English
 * Prevent starting game with >48 hogs (because engine doesn't support it yet)

Content Creation:
 + Theme objects can now have more than 1 in-land rect specified. You can specify the amount in theme.cfg by adding another number (and ,) before the first rect
 + Theme objects can now be placed on water (by setting first in-land rectangle to 0,0,0,0)
 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Themes can now have mirrored clouds and flakes: CloudsL.png, SDCloudsL.png, FlakeL.png, SDFlakeL.png
 + Water in themes supports custom animation and flow speed with water-animation and sd-water-animation in theme.cfg
 + Simplified hat format for unanimated hats; a single 32×32 image is enough. For clan hats, use size 64×32, with the color overlay at the right
 * Default water color was black instead of blue

Translations:
 + Scottish Gaelic updates for: Engine, frontend, tips, missions
 + Loading screen can now be translated
 + A few window titles can be translated
 * Built-in texts from Qt (e.g. “cut”, “paste”, “copy”) in frontend weren't translated